--- a/config.toml
+++ b/config.toml
@@ -15,14 +15,14 @@ extensionsmask = ["autolink"]
 ############ THEME BLACKBURN #############
 ##########################################
 
-copyright = "&copy; 2016. All rights reserved."
+# copyright = "&copy; 2016. All rights reserved."
 canonifyurls = true
 paginate = 10
 
 [params]
   subtitle = ""
   brand = "olycats"
-  googleAnalytics = "UA-110628235-1" #Your Google Analytics tracking ID
+  googleAnalytics = "UA-110628235-1"
 
   # CSS name for highlight.js
   highlightjs = "tomorrow-night-eighties"
@@ -34,19 +34,18 @@ paginate = 10
   custom_js = ["js/my.js"]
 
 [menu]
-  # Shown in the side menu.
   [[menu.main]]
     name = "Home"
     pre = "<i class='fa fa-home fa-fw'></i>"
     weight = 1
     identifier = "home"
     url = "/"
-#  [[menu.main]]
-#    name = "Posts"
-#    pre = "<i class='fa fa-list fa-fw'></i>"
-#    weight = 2
-#    identifier = "post"
-#    url = "/post/"
+  [[menu.main]]
+    name = "Posts"
+    pre = "<i class='fa fa-list fa-fw'></i>"
+    weight = 2
+    identifier = "post"
+    url = "/post/"
   [[menu.main]]
     name = "About"
     pre = "<i class='fa fa-user fa-fw'></i>"
